--- a/share-my-adventures/android/app/src/main/AndroidManifest.xml
+++ b/share-my-adventures/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     </intent>
   </queries>
   <application android:name=".MainApplication" android:label="@string/app_name" android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round" android:allowBackup="true" android:theme="@style/AppTheme" android:supportsRtl="true">
-    <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDPN8vAoM6kR-kUI1J5z7r5u6sM6Z4-KiM"/>
+    <meta-data android:name="com.google.android.geo.API_KEY" android:value="google-key"/>
     <meta-data android:name="expo.modules.updates.ENABLED" android:value="false"/>
     <meta-data android:name="expo.modules.updates.EXPO_UPDATES_CHECK_ON_LAUNCH" android:value="ALWAYS"/>
     <meta-data android:name="expo.modules.updates.EXPO_UPDATES_LAUNCH_WAIT_MS" android:value="0"/>
