--- a/share-my-adventures/app.json
+++ b/share-my-adventures/app.json
@@ -12,7 +12,7 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.svwdesign.sharemyadventures",
       "config": {
-        "googleMapsApiKey": "AIzaSyDPN8vAoM6kR-kUI1J5z7r5u6sM6Z4-KiM"
+        "googleMapsApiKey": ""
       },
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "Show your location on the map"
@@ -26,7 +26,7 @@
       },
       "config": {
         "googleMaps": {
-          "apiKey": "AIzaSyDPN8vAoM6kR-kUI1J5z7r5u6sM6Z4-KiM"
+          "apiKey": ""
         }
       }
     },
