--- a/share-my-adventures/ios/sharemyadventures/Info.plist
+++ b/share-my-adventures/ios/sharemyadventures/Info.plist
@@ -35,7 +35,7 @@
     <key>CFBundleVersion</key>
     <string>1</string>
     <key>GMSApiKey</key>
-    <string>google-key</string>
+    <string/>
     <key>LSMinimumSystemVersion</key>
     <string>12.0</string>
     <key>LSRequiresIPhoneOS</key>
